--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  font_awesome_flutter: ^10.8.0
+  firebase_core: ^3.10.0
+  cloud_firestore: ^5.6.1
+  firebase_auth: ^5.4.0
+  flutter_dotenv: ^5.2.1
+  equatable: ^2.0.7
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
+  get_it: ^8.0.3
+  dartz: ^0.10.1
+  shared_preferences: ^2.3.5
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
